<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    tools:context=".Profile">
    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/background"
        android:src="?attr/backIcon"
        />
    <RelativeLayout
        android:id="@+id/container_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/back_button"
        android:layout_centerInParent="true">
        <RelativeLayout
            android:id="@+id/compass_interface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/degree_container"
                android:layout_width="220dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true">
                <View
                    android:id="@+id/rectangleView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/rect2"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:id="@+id/degreeTV"
                        android:text="@string/heading"
                        android:textSize="20sp"
                        android:textStyle="normal|bold"/>
                    <TextView
                        android:id="@+id/degrees"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/_0_0"
                        android:layout_toEndOf="@+id/degreeTV"
                        android:textSize="20sp"
                        android:textStyle="normal|bold" />
                </RelativeLayout>

            </RelativeLayout>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:id="@+id/compass_image"
                android:layout_below="@+id/degree_container"
                android:layout_centerHorizontal="true"
                android:src="@drawable/compass_icon" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/step_interface"
            android:layout_width="220dp"
            android:layout_height="280dp"
            android:layout_alignParentEnd="true"
            android:background="@color/gunMetalGray"
            android:layout_marginBottom="20dp"
            >
            <TextView
                android:id="@+id/step_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="40dp"
                android:text="@string/step_counter"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:textStyle="normal|bold" />
            <View
                android:id="@+id/rectangleView2"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_below="@+id/step_counter"
                android:background="@drawable/rect2"/>
            <TextView
                android:id="@+id/step_count2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="130dp"
                android:text="@string/step_count"
                android:textSize="20sp"
                android:textStyle="normal|bold" />
            <TextView
                android:id="@+id/step_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="130dp"
                android:layout_toEndOf="@+id/step_count2"
                android:text="@string/_0"
                android:textSize="20sp"
                android:background="@color/white"
                android:textStyle="normal|bold" />
            <ToggleButton
                android:id="@+id/start_pause_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:textOff="@string/start"
                android:textOn="@string/pause"
                android:textColor="@color/white"
                android:layout_below="@id/rectangleView2"
                android:background="?attr/background"/>
            <Button
                android:id="@+id/reset_button"
                android:text="@string/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/background"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:layout_below="@id/rectangleView2"
                android:layout_toEndOf="@id/start_pause_button"
                android:layout_marginStart="20dp"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>