<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    tools:context=".CreateProfileActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/profile_creation"
        android:textColor="?attr/textColor"
        android:textSize="24sp"
         />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/imageView">
        <RelativeLayout
            android:id="@+id/container_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_a_username"
                android:textColor="?attr/textColor"
                android:layout_margin="20dp"/>

            <EditText
                android:id="@+id/user_id_view"
                android:layout_width="197dp"
                android:layout_height="44dp"
                android:inputType="text"
                android:textColor="?attr/textColor"
                android:layout_below="@+id/textView2"
                android:layout_margin="20dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/container_username">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_a_profile_picture"
                android:textColor="?attr/textColor"
                android:layout_margin="20dp"
                 />

            <ImageButton
                android:id="@+id/add_photo_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/background"
                android:src="?attr/cameraIcon"
                android:layout_below="@+id/textView3"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>
        <Button
            android:id="@+id/create_profile_button"
            android:layout_width="197dp"
            android:layout_height="74dp"
            android:background="?attr/buttonBackground"
            android:text="@string/create_profile"
            android:textAllCaps="false"
            android:textColor="?attr/buttonTextColor"
            android:layout_below="@+id/container_username"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"/>
    </RelativeLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:scaleType="centerCrop"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/no_profile"
        app:civ_border_color="#FFFFFF"
        app:civ_border_width="1dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_margin="20dp"
        />

</RelativeLayout>